Fix label could not be edited, closes #712

--- a/docs/src/content/docs/docs/v2/intro.mdx
+++ b/docs/src/content/docs/docs/v2/intro.mdx
@@ -35,7 +35,7 @@ The main view is composed of several elements
         The top of the screen holds the banner for updates, the link to this documentations, and the <Gear className="inline-icon"/> config icon. Finally, to the right of the <Gear className="inline-icon"/> config symbol you have a drop down menu for controlling when this banner will appear (always/never/on updates).
         The "Files" section in the major area of the left. There, you can do the typical operations:
         - Select the display type (grid or list)
-        - Select the [source storage](storage) of the files
+        - Select the [source storage](../storage) of the files
         - Sort the display order of the files
         - Add a folder, file, template, or import files by clicking the <Plus className="inline-icon"/> plus sign
         - Type the direct path to a desired location (the Location field),
@@ -52,7 +52,7 @@ The main view is composed of several elements
         ![Welcome screen second part](/img/welcome_screen_mobile_2.png)  
         The "Files" section in the major area of the left. There, you can do the typical operations:
         - Select the display type (grid or list)
-        - Select the [source storage](storage) of the files
+        - Select the [source storage](../storage) of the files
         - Sort the display order of the files
         - Add a folder, file, template, or import files by clicking the <Plus className="inline-icon"/> plus sign
         - Type the direct path to a desired location (the Location field),
