--- a/docs/src/content/docs/downloads/post-windows.mdx
+++ b/docs/src/content/docs/downloads/post-windows.mdx
@@ -13,10 +13,10 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
 Windows warns users when installing software without a certificate.
 
-![Smart screen](../../../assets/img/smart-screen.png)
+![Smart screen](/src/assets/img/smart-screen.png)
 
 To install the app, you need to click on "More info".
 
-![Smart screen more info](../../../assets/img/smart-screen-more-info.png)
+![Smart screen more info](/src/assets/img/smart-screen-more-info.png)
 
 Then, click on "Run anyway".
