--- a/docs/src/content/docs/de/index.mdx
+++ b/docs/src/content/docs/de/index.mdx
@@ -37,7 +37,7 @@ import { LinkCard, Card, CardGrid } from '@astrojs/starlight/components';
 
 ## Eigenschaften
 
-![Main view](/src/assets/img/main.png)
+![Main view](@assets/img/main.png)
 
 <CardGrid stagger>
 	<Card title="Let your ideas flow on an infinite canvas">
