New Crowdin updates (#719)
* New translations android.mdx (Romanian)
[ci skip]

* New translations android.mdx (French)
[ci skip]

* New translations ios.mdx (Romanian)
[ci skip]

* New translations ios.mdx (French)
[ci skip]

* New translations linux.mdx (Romanian)
[ci skip]

* New translations linux.mdx (French)
[ci skip]

* New translations macos.mdx (Romanian)
[ci skip]

* New translations macos.mdx (French)
[ci skip]

* New translations windows.mdx (Romanian)
[ci skip]

* New translations windows.mdx (French)
[ci skip]

* New translations app_en.arb (Turkish)
[ci skip]

* New translations embed.md (Romanian)
[ci skip]

* New translations embed.md (French)
[ci skip]

* New translations embed.md (Spanish)
[ci skip]

* New translations embed.md (Arabic)
[ci skip]

* New translations embed.md (Czech)
[ci skip]

* New translations embed.md (Danish)
[ci skip]

* New translations embed.md (German)
[ci skip]

* New translations embed.md (Greek)
[ci skip]

* New translations embed.md (Finnish)
[ci skip]

* New translations embed.md (Italian)
[ci skip]

* New translations embed.md (Japanese)
[ci skip]

* New translations embed.md (Dutch)
[ci skip]

* New translations embed.md (Norwegian)
[ci skip]

* New translations embed.md (Polish)
[ci skip]

* New translations embed.md (Portuguese)
[ci skip]

* New translations embed.md (Russian)
[ci skip]

* New translations embed.md (Swedish)
[ci skip]

* New translations embed.md (Turkish)
[ci skip]

* New translations embed.md (Ukrainian)
[ci skip]

* New translations embed.md (Chinese Simplified)
[ci skip]

* New translations embed.md (Portuguese, Brazilian)
[ci skip]

* New translations linux.mdx (Turkish)
[ci skip]

* New translations app_en.arb (Romanian)
[ci skip]

* New translations app_en.arb (French)
[ci skip]

* New translations app_en.arb (Spanish)
[ci skip]

* New translations app_en.arb (Afrikaans)
[ci skip]


--- a/app/lib/l10n/app_ar.arb
+++ b/app/lib/l10n/app_ar.arb
@@ -607,5 +607,7 @@
   "tiny": "صغير",
   "selectAll": "حدد الكل",
   "overrideTools": "أدوات التجاوز",
-  "hideCursorWhileDrawing": "إخفاء المؤشر أثناء الرسم"
+  "hideCursorWhileDrawing": "إخفاء المؤشر أثناء الرسم",
+  "installed": "مثبت",
+  "install": "تثبيت"
 }
