--- a/app/lib/l10n/app_tr.arb
+++ b/app/lib/l10n/app_tr.arb
@@ -47,7 +47,7 @@
   "background": "Arkaplan",
   "box": "Kutu",
   "locale": "Dil",
-  "systemLocale": "System locale",
+  "systemLocale": "Sistem varsayılanı",
   "information": "Bilgilendirme",
   "license": "Lisans",
   "imprint": "Künye",
@@ -548,14 +548,14 @@
   "type": "Tür",
   "side": "Side",
   "client": "Client",
-  "server": "Server",
+  "server": "Sunucu",
   "switchView": "Switch View",
   "lasso": "Lasso",
   "hideUI": "Hide UI",
-  "density": "Density",
-  "compact": "Compact",
-  "comfortable": "Comfortable",
-  "standard": "Standard",
+  "density": "Genişlik",
+  "compact": "Sıkıştır",
+  "comfortable": "Geniş",
+  "standard": "Standart",
   "lock": "Lock",
   "addElement": "Add element",
   "notDefaultConnection": "Not default connection",
@@ -568,7 +568,7 @@
   "print": "Print",
   "dav": "DAV",
   "eyeDropper": "Eye dropper",
-  "users": "Users",
+  "users": "Kullanıcılar",
   "experiments": "Experiments",
   "address": "Address",
   "spreadToPages": "Spread to pages",
@@ -586,7 +586,7 @@
   },
   "continueAnyway": "Continue anyway",
   "zoomControl": "Zoom control",
-  "highContrast": "High contrast",
+  "highContrast": "Yüksek kontrast",
   "shouldANumber": "This value should be valid number",
   "createAreas": "Create areas",
   "autosave": "Autosave",
@@ -607,5 +607,7 @@
   "tiny": "Tiny",
   "selectAll": "Select all",
   "overrideTools": "Override tools",
-  "hideCursorWhileDrawing": "Hide cursor while drawing"
+  "hideCursorWhileDrawing": "Hide cursor while drawing",
+  "installed": "Installed",
+  "install": "Install"
 }
