--- a/app/lib/l10n/app_zh.arb
+++ b/app/lib/l10n/app_zh.arb
@@ -607,5 +607,7 @@
   "tiny": "微调",
   "selectAll": "选择所有",
   "overrideTools": "覆盖工具",
-  "hideCursorWhileDrawing": "绘制时隐藏光标"
+  "hideCursorWhileDrawing": "绘制时隐藏光标",
+  "installed": "已安装",
+  "install": "安装"
 }
