Start adding multi file selection, fix partially #713

--- a/app/lib/l10n/app_en.arb
+++ b/app/lib/l10n/app_en.arb
@@ -609,5 +609,6 @@
   "overrideTools": "Override tools",
   "hideCursorWhileDrawing": "Hide cursor while drawing",
   "installed": "Installed",
-  "install": "Install"
+  "install": "Install",
+  "deselect": "Deselect"
 }
