New Crowdin updates (#727)
* New translations app_en.arb (Turkish)
[ci skip]

* New translations app_en.arb (Ukrainian)
[ci skip]

* New translations app_en.arb (Chinese Simplified)
[ci skip]

* New translations app_en.arb (Chinese Traditional)
[ci skip]

* New translations app_en.arb (Vietnamese)
[ci skip]

* New translations app_en.arb (Portuguese, Brazilian)
[ci skip]

* New translations app_en.arb (Thai)
[ci skip]

* New translations app_en.arb (Hindi)
[ci skip]

* New translations app_en.arb (Odia)
[ci skip]

* New translations app_en.arb (Serbian)
[ci skip]

* New translations app_en.arb (Romanian)
[ci skip]

* New translations app_en.arb (French)
[ci skip]

* New translations app_en.arb (Spanish)
[ci skip]

* New translations app_en.arb (Arabic)
[ci skip]

* New translations app_en.arb (Czech)
[ci skip]

* New translations app_en.arb (Danish)
[ci skip]

* New translations app_en.arb (German)
[ci skip]

* New translations app_en.arb (Greek)
[ci skip]

* New translations app_en.arb (Finnish)
[ci skip]

* New translations app_en.arb (Italian)
[ci skip]

* New translations app_en.arb (Japanese)
[ci skip]

* New translations app_en.arb (Dutch)
[ci skip]

* New translations app_en.arb (Norwegian)
[ci skip]

* New translations app_en.arb (Polish)
[ci skip]

* New translations app_en.arb (Portuguese)
[ci skip]

* New translations app_en.arb (Russian)
[ci skip]

* New translations app_en.arb (Swedish)
[ci skip]

* New translations app_en.arb (Ukrainian)
[ci skip]

* New translations app_en.arb (Chinese Simplified)
[ci skip]

* New translations app_en.arb (Portuguese, Brazilian)
[ci skip]

* New translations pages.md (Romanian)
[ci skip]

* New translations pages.md (French)
[ci skip]

* New translations pages.md (Spanish)
[ci skip]

* New translations pages.md (Afrikaans)
[ci skip]

* New translations pages.md (Arabic)
[ci skip]

* New translations pages.md (Catala

--- a/app/lib/l10n/app_ar.arb
+++ b/app/lib/l10n/app_ar.arb
@@ -609,5 +609,7 @@
   "overrideTools": "أدوات التجاوز",
   "hideCursorWhileDrawing": "إخفاء المؤشر أثناء الرسم",
   "installed": "مثبت",
-  "install": "تثبيت"
+  "install": "تثبيت",
+  "deselect": "إلغاء التحديد",
+  "changeLayer": "تغيير الطبقة"
 }
