--- a/app/lib/l10n/app_cs.arb
+++ b/app/lib/l10n/app_cs.arb
@@ -609,5 +609,7 @@
   "overrideTools": "Přepsat nástroje",
   "hideCursorWhileDrawing": "Skrýt kurzor při kreslení",
   "installed": "Nainstalováno",
-  "install": "Instalovat"
+  "install": "Instalovat",
+  "deselect": "Zrušit výběr",
+  "changeLayer": "Změnit vrstvu"
 }
