--- a/app/lib/l10n/app_ja.arb
+++ b/app/lib/l10n/app_ja.arb
@@ -609,5 +609,7 @@
   "overrideTools": "ツールを上書きする",
   "hideCursorWhileDrawing": "描画中にカーソルを隠す",
   "installed": "インストール済み",
-  "install": "インストール"
+  "install": "インストール",
+  "deselect": "選択を解除",
+  "changeLayer": "レイヤーを変更"
 }
