--- a/app/lib/l10n/app_no.arb
+++ b/app/lib/l10n/app_no.arb
@@ -609,5 +609,7 @@
   "overrideTools": "Overstyr verktøy",
   "hideCursorWhileDrawing": "Skjul markøren under tegning",
   "installed": "Installert",
-  "install": "Installer"
+  "install": "Installer",
+  "deselect": "Avvelg",
+  "changeLayer": "Endre lag"
 }
