--- a/app/lib/l10n/app_sv.arb
+++ b/app/lib/l10n/app_sv.arb
@@ -609,5 +609,7 @@
   "overrideTools": "Åsidosätt verktyg",
   "hideCursorWhileDrawing": "Dölj markören medan du ritar",
   "installed": "Installerad",
-  "install": "Installera"
+  "install": "Installera",
+  "deselect": "Avmarkera",
+  "changeLayer": "Ändra lager"
 }
