--- a/app/lib/l10n/app_uk.arb
+++ b/app/lib/l10n/app_uk.arb
@@ -609,5 +609,7 @@
   "overrideTools": "Змінити інструменти",
   "hideCursorWhileDrawing": "Сховати курсор під час малювання",
   "installed": "Встановлено",
-  "install": "Інсталювати"
+  "install": "Інсталювати",
+  "deselect": "Зняти виділення",
+  "changeLayer": "Змінити шар"
 }
