--- a/app/lib/l10n/app_da.arb
+++ b/app/lib/l10n/app_da.arb
@@ -609,5 +609,7 @@
   "overrideTools": "Tilsidesæt værktøjer",
   "hideCursorWhileDrawing": "Skjul markør under tegning",
   "installed": "Installeret",
-  "install": "Installér"
+  "install": "Installér",
+  "deselect": "Fravælg",
+  "changeLayer": "Skift lag"
 }
