--- a/app/lib/l10n/app_nl.arb
+++ b/app/lib/l10n/app_nl.arb
@@ -609,5 +609,7 @@
   "overrideTools": "Hulpmiddelen vervangen",
   "hideCursorWhileDrawing": "Verberg cursor tijdens tekenen",
   "installed": "Geinstalleerd",
-  "install": "Installeren"
+  "install": "Installeren",
+  "deselect": "Deselecteer",
+  "changeLayer": "Laag wijzigen"
 }
