--- a/app/lib/l10n/app_pt_BR.arb
+++ b/app/lib/l10n/app_pt_BR.arb
@@ -609,5 +609,7 @@
   "overrideTools": "Sobrescrever ferramentas",
   "hideCursorWhileDrawing": "Ocultar cursor durante o desenho",
   "installed": "Instalado",
-  "install": "Instale"
+  "install": "Instale",
+  "deselect": "Desselecionar",
+  "changeLayer": "Alterar camada"
 }
