--- a/app/lib/l10n/app_ro.arb
+++ b/app/lib/l10n/app_ro.arb
@@ -609,5 +609,7 @@
   "overrideTools": "Suprascrie uneltele",
   "hideCursorWhileDrawing": "Ascunde cursorul în timpul desenării",
   "installed": "Instalat",
-  "install": "Instalează"
+  "install": "Instalează",
+  "deselect": "Deselectează",
+  "changeLayer": "Schimbă stratul"
 }
