--- a/app/lib/l10n/app_ru.arb
+++ b/app/lib/l10n/app_ru.arb
@@ -609,5 +609,7 @@
   "overrideTools": "Переопределить инструменты",
   "hideCursorWhileDrawing": "Скрыть курсор во время рисования",
   "installed": "Установлено",
-  "install": "Установить"
+  "install": "Установить",
+  "deselect": "Отменить выбор",
+  "changeLayer": "Изменить слой"
 }
