--- a/app/lib/l10n/app_zh.arb
+++ b/app/lib/l10n/app_zh.arb
@@ -609,5 +609,7 @@
   "overrideTools": "覆盖工具",
   "hideCursorWhileDrawing": "绘制时隐藏光标",
   "installed": "已安装",
-  "install": "安装"
+  "install": "安装",
+  "deselect": "取消选择",
+  "changeLayer": "更改图层"
 }
