Add new font to butterfly docs, fix typos

--- a/docs/src/content/docs/docs/v2/intro.mdx
+++ b/docs/src/content/docs/docs/v2/intro.mdx
@@ -49,7 +49,7 @@ The main view is composed of several elements
         Below those, you can find the quick start section holding the templates avialable to you. By defaule, the templates are the light and dark templates.
         Scrolling down, you will see the file interface:
         \
-        ![Welcome screen second part](/img/welcome_screen_mobile_2.png)  
+        ![Welcome screen second part](welcome_screen_mobile_2.png)  
         The "Files" section in the major area of the left. There, you can do the typical operations:
         - Select the display type (grid or list)
         - Select the [source storage](../storage) of the files
@@ -87,7 +87,7 @@ You can return from the document view to the document list with the back action 
   \
   At the bottom of the screen you have the toolbar\
   ![toolbar](document_view_toolbar.png)\
-  By default this bar has the <ScribbleLoop className="inline-icon"/> lasso tool; the <Pen /> pen tool; the <Path className="inline-icon"/> path erase tool; the <ArrowCounterClockwise className="inline-icon"/> undo and <ArrowClockwise className="inline-icon"/> redo butons, and the <Hand className="inline-icon"/> hand tool. Then you have the <Plus className="inline-icon"/> button to add elements to the tool bar, the <Wrench className="inline-icon"/> button to configure the document, and finally the <Lock className="inline-icon"/> tool to look the zoom and/or the position of the screen.
+  By default this bar has the <ScribbleLoop className="inline-icon"/> lasso tool; the <Pen className="inline-icon" /> pen tool; the <Path className="inline-icon"/> path erase tool; the <ArrowCounterClockwise className="inline-icon"/> undo and <ArrowClockwise className="inline-icon"/> redo butons, and the <Hand className="inline-icon"/> hand tool. Then you have the <Plus className="inline-icon"/> button to add elements to the tool bar, the <Wrench className="inline-icon"/> button to configure the document, and finally the <Lock className="inline-icon"/> tool to look the zoom and/or the position of the screen.
   ### Important notes
   1. If some of the element on the toolbar are not visible to you, or swipe left and right to reveal further elements.
   2. After selecting a tool, a small menu will appear to configure the it. Long clicking the tool again will allow you to drag it to a new position
