Start renaming current layers to collections

--- a/app/lib/l10n/app_en.arb
+++ b/app/lib/l10n/app_en.arb
@@ -611,5 +611,6 @@
   "installed": "Installed",
   "install": "Install",
   "deselect": "Deselect",
-  "changeLayer": "Change layer"
+  "changeLayer": "Change layer",
+  "collections": "Collections"
 }
